--- a/beta/index.html
+++ b/beta/index.html
@@ -34,7 +34,9 @@
 	<link rel="stylesheet" href="../css/site.css?v=1.0">
 	<!-- InstanceBeginEditable name="head" -->
 	<style>
-		body>nav, body>footer {display: none;}
+		body > nav.app-bar, body>footer { display: none; }
+		#landing { display: block; width: 100%; height: 700px; background: url("../images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
+		#landing img {display: block; width: 30%; height: auto; margin: 82px auto 20px auto;}
 	</style>
 	<!-- InstanceEndEditable -->
 </head>
@@ -113,6 +115,17 @@
 		</ul>
 	</nav>
 	<!-- InstanceBeginEditable name="content" -->
+	<section id="landing">
+		<div class="container">
+			<div class="grid">
+    			<div class="row">
+        		<div class="cell-12">
+							<img src="../images/logo-interdrought.png" alt="logo">
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
 	
