--- a/beta/index.html
+++ b/beta/index.html
@@ -30,7 +30,7 @@
 	<link rel="icon" type="image/png" href=".png" sizes="192x192">
 	<link rel="icon" type="image/png" href=".png" sizes="96x96">
 	<link rel="icon" type="image/png" href=".png" sizes="16x16">-->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" href="../css/site.css?v=1.0">
 	<!-- InstanceBeginEditable name="head" -->
 	<style>
@@ -41,7 +41,7 @@
 	<!-- InstanceEndEditable -->
 </head>
 <body>
-	<nav data-role="appbar" data-expand="true" ng-controller="nav">
+	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
 		<ul class="app-bar-menu">
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
@@ -50,7 +50,7 @@
 					<li><a href="#">{{Lang.menu003}}</a></li>
 					<li><a href="#">{{Lang.menu004}}</a></li>
 					<li><a href="#">{{Lang.menu005}}</a></li>
-            	</ul>
+        </ul>
 			</li>
 			<li>
 				<a class="nav-link" href="index.html">{{Lang.menu006}}</a>
@@ -64,7 +64,7 @@
 					<li><a href="#">{{Lang.menu009}}</a></li>
 					<li><a href="#">{{Lang.menu010}}</a></li>
 					<li><a href="#">{{Lang.menu011}}</a></li>
-            	</ul>
+        </ul>
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
@@ -76,7 +76,7 @@
 					<li><a href="#">{{Lang.menu017}}</a></li>
 					<li><a href="#">{{Lang.menu018}}</a></li>
 					<li><a href="#">{{Lang.menu019}}</a></li>
-            	</ul>
+        </ul>
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu020}}</a>
@@ -87,13 +87,13 @@
 					<li><a href="#">{{Lang.menu024}}</a></li>
 					<li><a href="#">{{Lang.menu025}}</a></li>
 					<li><a href="#">{{Lang.menu026}}</a></li>
-            	</ul> 
+        </ul> 
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu027}}</a>
 				<ul class="d-menu" data-role="dropdown">
 					<li><a href="#">{{Lang.menu028}}</a></li> 
-            	</ul>
+        </ul>
 			</li>
 			<li>
 				<a class="nav-link" href="index.html">{{Lang.menu029}}</a>
@@ -105,13 +105,8 @@
 			<li><a class="nav-link" href="things.html">Things to Do</a></li>
 			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
 			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li>
-				<select>
-					<option val="" selected></option>
-					<option val="Es">Español</option>
-					<option val="En">English</option>
-				</select>
-			</li>
+			<li><a href="#" ng-click="TxtLang('Es')"><span class="mif-flag mif-1x"></span></a></li>
+			<li><a href="#" ng-click="TxtLang('En')"><span class="mif-flag mif-1x"></span></a></li>
 		</ul>
 	</nav>
 	<!-- InstanceBeginEditable name="content" -->
