--- a/beta/index.html
+++ b/beta/index.html
@@ -33,16 +33,11 @@
 	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" href="../css/site.css?v=1.0">
 	<!-- InstanceBeginEditable name="head" -->
-	<style>
-		body > nav.app-bar, body>footer { display: none; }
-		#landing { display: block; width: 100%; height: 700px; background: url("../images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
-		#landing img {display: block; width: 30%; height: auto; margin: 82px auto 20px auto;}
-	</style>
 	<!-- InstanceEndEditable -->
 </head>
 <body>
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu">
+		<ul class="app-bar-menu flex-justify-center">
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
@@ -110,16 +105,8 @@
 		</ul>
 	</nav>
 	<!-- InstanceBeginEditable name="content" -->
-	<section id="landing">
-		<div class="container">
-			<div class="grid">
-    			<div class="row">
-        		<div class="cell-12">
-							<img src="../images/logo-interdrought.png" alt="logo">
-						</div>
-				</div>
-			</div>
-		</div>
+	<section ng-controller="home" id="home">
+		<h1>{{Lang.txt1}}</h1>
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
@@ -130,6 +117,7 @@
 	<script src="../js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="../js/site.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceBeginEditable name="scripts" -->
+	<script src="../js/translator/home.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
