--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu">
+		<ul class="app-bar-menu flex-justify-center">
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
