--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="WebApp"><!-- InstanceBegin template="/Templates/base.dwt" codeOutsideHTMLIsLocked="false" -->
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>INTERDROUGHT 2020</title>
-	<!-- InstanceEndEditable -->
 	<meta name="description" content="">
 	<meta name="keywords" content=""> 
 	<meta name="author" content="btc Americas">
@@ -30,95 +28,31 @@
 	<link rel="icon" type="image/png" href=".png" sizes="192x192">
 	<link rel="icon" type="image/png" href=".png" sizes="96x96">
 	<link rel="icon" type="image/png" href=".png" sizes="16x16">-->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" href="css/site.css?v=1.0">
-	<!-- InstanceBeginEditable name="head" -->
-	<!-- InstanceEndEditable -->
+	<style>
+		body > nav.app-bar, body>footer { display: none; }
+		#landing { display: block; width: 100%; background: url("images/landing-sinlogo.jpg") no-repeat no-repeat center; background-size: cover;}
+		#landing img {display: block; width: 30%; height: auto; margin: 0px auto;}
+	</style>
 </head>
 <body>
-	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu">
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu002}}</a></li>
-					<li><a href="#">{{Lang.menu003}}</a></li>
-					<li><a href="#">{{Lang.menu004}}</a></li>
-					<li><a href="#">{{Lang.menu005}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="index.html">{{Lang.menu006}}</a>
-			</li>
-			<li>
-				<a class="nav-link" href="index.html">{{Lang.menu007}}</a>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu009}}</a></li>
-					<li><a href="#">{{Lang.menu010}}</a></li>
-					<li><a href="#">{{Lang.menu011}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu013}}</a></li>
-					<li><a href="#">{{Lang.menu014}}</a></li>
-					<li><a href="#">{{Lang.menu015}}</a></li>
-					<li><a href="#">{{Lang.menu016}}</a></li>
-					<li><a href="#">{{Lang.menu017}}</a></li>
-					<li><a href="#">{{Lang.menu018}}</a></li>
-					<li><a href="#">{{Lang.menu019}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu020}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu021}}</a></li>
-					<li><a href="#">{{Lang.menu022}}</a></li>
-					<li><a href="#">{{Lang.menu023}}</a></li>
-					<li><a href="#">{{Lang.menu024}}</a></li>
-					<li><a href="#">{{Lang.menu025}}</a></li>
-					<li><a href="#">{{Lang.menu026}}</a></li>
-        </ul> 
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu027}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu028}}</a></li> 
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="index.html">{{Lang.menu029}}</a>
-			</li>
-			<!--<li><a class="nav-link" href="program.html">Program</a></li>
-			<li><a class="nav-link" href="speakers.html">Speakers</a></li>
-			<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
-			<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
-			<li><a class="nav-link" href="things.html">Things to Do</a></li>
-			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
-			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')"><span class="mif-flag mif-1x"></span></a></li>
-			<li><a href="#" ng-click="TxtLang('En')"><span class="mif-flag mif-1x"></span></a></li>
-		</ul>
-	</nav>
-	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="home" id="home">
-		
-	<h1>{{Lang.txt1}}</h1>
+	<section id="landing">
+		<div class="container">
+			<div class="grid">
+    			<div class="row">
+        		<div class="cell-12">
+							<img src="images/logo-interdrought.png" alt="logo">
+						</div>
+				</div>
+			</div>
+		</div>
 	</section>
-	<!-- InstanceEndEditable -->
-	<footer>
-	
-	</footer>
 	<script src="js/lib.min.js?v=1.0" type="text/javascript"></script>
-	<script src="js/angular.min.js?v=1.0" type="text/javascript"></script>
-	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
-	<script src="js/site.js?v=1.0" type="text/javascript"></script>
-	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/home.js?v=1.0" type="text/javascript"></script>
-	<!-- InstanceEndEditable -->
+	<script>
+		$(function(){
+			$('#landing').css('height', $(window).height() + 'px')
+		})
+	</script>
 </body>
-<!-- InstanceEnd --></html>
+</html>
