--- a/beta/index.html
+++ b/beta/index.html
@@ -39,12 +39,12 @@
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
 		<ul class="app-bar-menu flex-justify-center">
 			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
+				<a class="nav-link dropdown-toggle" href="home.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu002}}</a></li>
-					<li><a href="#">{{Lang.menu003}}</a></li>
-					<li><a href="#">{{Lang.menu004}}</a></li>
-					<li><a href="#">{{Lang.menu005}}</a></li>
+					<li><a href="home.html">{{Lang.menu002}}</a></li>
+					<li><a href="home.html">{{Lang.menu003}}</a></li>
+					<li><a href="home.html">{{Lang.menu004}}</a></li>
+					<li><a href="home.html">{{Lang.menu005}}</a></li>
         </ul>
 			</li>
 			<li>
@@ -100,13 +100,28 @@
 			<li><a class="nav-link" href="things.html">Things to Do</a></li>
 			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
 			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')"><span class="mif-flag mif-1x"></span></a></li>
-			<li><a href="#" ng-click="TxtLang('En')"><span class="mif-flag mif-1x"></span></a></li>
+			<li><a href="#" ng-click="TxtLang('Es')">
+					<img src="../images/mexico.png" alt="mexico" class="logo-nav">
+				</a></li>
+			<li><a href="#" ng-click="TxtLang('En')">
+				<img src="../images/eu.png" alt="mexico" class="logo-nav">
+				</a></li>
 		</ul>
-	</nav>
+	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
+<body>
+	<section id="landing">
+		<div class="container">
+			<div class="grid">
+    			<div class="row">
+        		<div class="cell-12">
+							<img src="../images/logo-interdrought.png" alt="logo">
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section ng-controller="home" id="home">
-		<h1>{{Lang.txt1}}</h1>
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
@@ -117,7 +132,11 @@
 	<script src="../js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="../js/site.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="../js/translator/home.js?v=1.0" type="text/javascript"></script>
+	<script>
+		$(function(){
+			$('#landing').css('height', $(window).height() + 'px')
+		})
+	</script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
