--- a/program.html
+++ b/program.html
@@ -39,12 +39,12 @@
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
 		<ul class="app-bar-menu flex-justify-center">
 			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
+				<a class="nav-link dropdown-toggle" href="home.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu002}}</a></li>
-					<li><a href="#">{{Lang.menu003}}</a></li>
-					<li><a href="#">{{Lang.menu004}}</a></li>
-					<li><a href="#">{{Lang.menu005}}</a></li>
+					<li><a href="home.html">{{Lang.menu002}}</a></li>
+					<li><a href="home.html">{{Lang.menu003}}</a></li>
+					<li><a href="home.html">{{Lang.menu004}}</a></li>
+					<li><a href="home.html">{{Lang.menu005}}</a></li>
         </ul>
 			</li>
 			<li>
@@ -100,11 +100,18 @@
 			<li><a class="nav-link" href="things.html">Things to Do</a></li>
 			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
 			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')"><span class="mif-flag mif-1x"></span></a></li>
-			<li><a href="#" ng-click="TxtLang('En')"><span class="mif-flag mif-1x"></span></a></li>
+			<li><a href="#" ng-click="TxtLang('Es')">
+					<img src="images/mexico.png" alt="mexico" class="logo-nav">
+				</a></li>
+			<li><a href="#" ng-click="TxtLang('En')">
+				<img src="images/eu.png" alt="mexico" class="logo-nav">
+				</a></li>
 		</ul>
-	</nav>
+	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
+		<section ng-controller="program">
+	<h1>{{Lang.txt1}}</h1>
+	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
 	
@@ -114,6 +121,7 @@
 	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceBeginEditable name="scripts" -->
+	<script src="js/translator/program.js" type="text/javascript"></script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
