--- a/beta/index.html
+++ b/beta/index.html
@@ -39,12 +39,12 @@
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
 		<ul class="app-bar-menu flex-justify-center">
 			<li>
-				<a class="nav-link dropdown-toggle" href="home.html">{{Lang.menu001}}</a>
+				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="home.html">{{Lang.menu002}}</a></li>
-					<li><a href="home.html">{{Lang.menu003}}</a></li>
-					<li><a href="home.html">{{Lang.menu004}}</a></li>
-					<li><a href="home.html">{{Lang.menu005}}</a></li>
+					<li><a href="../welcome.html">{{Lang.menu002}}</a></li>
+					<li><a href="../committee.html">{{Lang.menu003}}</a></li>
+					<!--<li><a href="home.html">{{Lang.menu004}}</a></li>
+					<li><a href="home.html">{{Lang.menu005}}</a></li>-->
         </ul>
 			</li>
 			<li>
@@ -109,7 +109,6 @@
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-<body>
 	<section id="landing">
 		<div class="container">
 			<div class="grid">
@@ -120,8 +119,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
-	<section ng-controller="home" id="home">
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
