--- a/committee.html
+++ b/committee.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Untitled Document</title>
+	<title>INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="">
 	<meta name="keywords" content=""> 
@@ -109,8 +109,37 @@
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-		<section ng-controller="program">
-	<h1>{{Lang.txt1}}</h1>
+	<section ng-controller="committee">
+		<div class="img-container">
+			<img src="images/bg-gotas.jpg" alt="interdrought">
+		</div>
+		<article id="committee">
+			<div class="container">
+				<div class="row">
+					<div class="cell-12">
+						<div class="bgTitles">
+							<h1 class="title">{{Lang.txt20}}</h1>
+						</div> 
+						<p>{{Lang.txt21}}</p>
+						<p><strong>{{Lang.txt22}}</strong></p>
+						<p>{{Lang.txt23}}</p>
+						<p><strong>{{Lang.txt24}}</strong></p>
+						<p>{{Lang.txt25}}</p>
+						<p>{{Lang.txt26}}</p>
+						<p>{{Lang.txt27}}</p>
+						<p>{{Lang.txt28}}</p>
+						<p>{{Lang.txt29}}</p>
+						<p>{{Lang.txt30}}</p>
+						<p>{{Lang.txt31}}</p>
+						<p>{{Lang.txt32}}</p>
+						<p>{{Lang.txt33}}</p>
+						</div>
+					</div>
+				</div>
+		</article>
+		<div class="img-container">
+				<img src="images/footer.jpg" alt="interdrought">
+		</div>
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer>
@@ -121,7 +150,7 @@
 	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/program.js" type="text/javascript"></script>
+	<script src="js/translator/committee.js" type="text/javascript"></script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
