Informacion completa hasta ahorita, no se ve bien el carousel en invitation y location, ni el footer.

--- a/beta/index.html
+++ b/beta/index.html
@@ -7,11 +7,11 @@
 	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>Interdrouht 2020</title>
 	<!-- InstanceEndEditable -->
-	<meta name="description" content="">
-	<meta name="keywords" content=""> 
+	<meta name="description" content="{{Lang.menu031}}">
+	<meta name="keywords" content="{{Lang.menu030}}"> 
 	<meta name="author" content="btc Americas">
-	<meta name="copyright" content="btc americas">
-	<meta name="robot" content="index,follow">
+	<meta name="copyright" content="btc americas"> 
+	<meta name="robot" content="index,follow"> 
 	<meta name="google" content="notranslate" />
 	<meta name="metro4:init" content="true">
 	<meta name="metro4:locale" content="es-MX">
@@ -42,9 +42,9 @@
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu001}}</a>
 				<ul class="d-menu" data-role="dropdown">
 					<li><a href="../welcome.html">{{Lang.menu002}}</a></li>
-					<li><a href="../committee.html">{{Lang.menu003}}</a></li>
-					<!--<li><a href="home.html">{{Lang.menu004}}</a></li>
-					<li><a href="home.html">{{Lang.menu005}}</a></li>-->
+					<li><a href="../welcome.html">{{Lang.menu003}}</a></li>
+					<li><a href="../committe-int.html">{{Lang.menu004}}</a></li>
+					<li><a href="../committee.html">{{Lang.menu005}}</a></li>
         </ul>
 			</li>
 			<li>
@@ -56,38 +56,38 @@
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu009}}</a></li>
-					<li><a href="#">{{Lang.menu010}}</a></li>
-					<li><a href="#">{{Lang.menu011}}</a></li>
+					<li><a href="index.html">{{Lang.menu009}}</a></li>
+					<li><a href="index.html">{{Lang.menu010}}</a></li>
+					<li><a href="index.html">{{Lang.menu011}}</a></li>
         </ul>
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu013}}</a></li>
-					<li><a href="#">{{Lang.menu014}}</a></li>
-					<li><a href="#">{{Lang.menu015}}</a></li>
-					<li><a href="#">{{Lang.menu016}}</a></li>
-					<li><a href="#">{{Lang.menu017}}</a></li>
-					<li><a href="#">{{Lang.menu018}}</a></li>
-					<li><a href="#">{{Lang.menu019}}</a></li>
+					<li><a href="../location.html">{{Lang.menu013}}</a></li>
+					<li><a href="../venue.html">{{Lang.menu014}}</a></li>
+					<li><a href="index.html">{{Lang.menu015}}</a></li>
+					<li><a href="index.html">{{Lang.menu016}}</a></li>
+					<li><a href="index.html">{{Lang.menu017}}</a></li>
+					<li><a href="index.html">{{Lang.menu018}}</a></li>
+					<li><a href="../climate.html">{{Lang.menu019}}</a></li>
         </ul>
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu020}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu021}}</a></li>
-					<li><a href="#">{{Lang.menu022}}</a></li>
-					<li><a href="#">{{Lang.menu023}}</a></li>
-					<li><a href="#">{{Lang.menu024}}</a></li>
-					<li><a href="#">{{Lang.menu025}}</a></li>
-					<li><a href="#">{{Lang.menu026}}</a></li>
+					<li><a href="index.html">{{Lang.menu021}}</a></li>
+					<li><a href="index.html">{{Lang.menu022}}</a></li>
+					<li><a href="index.html">{{Lang.menu023}}</a></li>
+					<li><a href="index.html">{{Lang.menu024}}</a></li>
+					<li><a href="index.html">{{Lang.menu025}}</a></li>
+					<li><a href="index.html">{{Lang.menu026}}</a></li>
         </ul> 
 			</li>
 			<li>
 				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu027}}</a>
 				<ul class="d-menu" data-role="dropdown">
-					<li><a href="#">{{Lang.menu028}}</a></li> 
+					<li><a href="index.html">{{Lang.menu028}}</a></li> 
         </ul>
 			</li>
 			<li>
@@ -106,6 +106,9 @@
 			<li><a href="#" ng-click="TxtLang('En')">
 				<img src="../images/eu.png" alt="mexico" class="logo-nav">
 				</a></li>
+			<li>
+				<a class="nav-link" href="index.html"><span class="mif-home"></span></a>
+			</li>
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
@@ -121,13 +124,25 @@
 		</div>
 	</section>
 	<!-- InstanceEndEditable -->
-	<footer>
-	
+	<footer> 
+		<div class="footer">
+			<img src="images/Logo-btc-blanco.png" alt="btc-logo">
+		</div>
 	</footer>
 	<script src="../js/lib.min.js?v=1.0" type="text/javascript"></script>
 	<script src="../js/angular.min.js?v=1.0" type="text/javascript"></script>
 	<script src="../js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="../js/site.js?v=1.0" type="text/javascript"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137964890-12"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-137964890-12');
+	</script>
+
 	<!-- InstanceBeginEditable name="scripts" -->
 	<script>
 		$(function(){
