--- a/committe-int.html
+++ b/committe-int.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Untitled Document</title>
+	<title>INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -112,9 +112,35 @@
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="contact">
-	<h1>{{Lang.txt1}}</h1>
+	<section ng-controller="committe-int" id="committe-int">
+		<div class="img-container">
+			<img src="images/bg-gotas.jpg" alt="interdrought">
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="cell-12">
+					<div class="bgTitles">
+						<h1 class="title">{{Lang.txt1}}</h1>
+					</div>
+					<p>{{Lang.txt2}}</p>
+					<p>{{Lang.txt3}}</p>
+					<p>{{Lang.txt4}}</p>
+					<p>{{Lang.txt5}}</p>
+					<p>{{Lang.txt6}}</p>
+					<p>{{Lang.txt7}}</p>
+					<p>{{Lang.txt8}}</p>
+					<p>{{Lang.txt9}}</p>
+					<p>{{Lang.txt10}}</p>
+				</div>
+			</div>
+		</div>
 	</section>
+	<div class="img-container" id="footer">
+			<img src="images/logo-interdrought.png" alt="interdrought">
+	</div>
+	<!--<div class="img-container">
+		<img src="images/bg-barcelo.jpg" alt="interdrought">
+	</div>-->
 	<!-- InstanceEndEditable -->
 	<footer> 
 		<div class="footer">
@@ -136,7 +162,7 @@
 	</script>
 
 	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/contact.js?v=1.0" type="text/javascript"></script>
+	<script src="js/translator/committe-int.js" type="text/javascript"></script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
