--- a/climate.html
+++ b/climate.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Untitled Document</title>
+	<title>INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -112,8 +112,10 @@
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="contact">
-	<h1>{{Lang.txt1}}</h1>
+	<section ng-controller="climate">
+	<div class="img-container" id="footer">
+				<img src="images/logo-interdrought.png" alt="interdrought">
+		</div>
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer> 
@@ -136,7 +138,8 @@
 	</script>
 
 	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/contact.js?v=1.0" type="text/javascript"></script>
+	<script src="js/translator/climate.js" type="text/javascript"></script> 
+	<div id="cont_3be2d07eaa8856fcacbad869a1bdbb2d"><script type="text/javascript" async src="https://www.meteored.mx/wid_loader/3be2d07eaa8856fcacbad869a1bdbb2d"></script></div>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
