--- a/location.html
+++ b/location.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Untitled Document</title>
+	<title>INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -112,8 +112,57 @@
 		</ul>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="contact">
-	<h1>{{Lang.txt1}}</h1>
+	<section ng-controller="location">
+		<article>
+			<div data-role="carousel"
+					 data-cls-bullet="bullet-big"
+					 data-auto-start="true"
+					 data-cls-controls="fg-white"
+					 data-bullets-position="right"
+					 data-control-next="<span class='mif-chevron-right fg-cyan'></span>"
+					 data-control-prev="<span class='mif-chevron-left fg-cyan'></span>">
+						<div class="slide" data-cover="images/bg-cdmx1.jpg" alt="banner"></div>
+						<div class="slide" data-cover="images/bg-cdmx2.jpg" alt="banner"></div>
+						<div class="slide" data-cover="images/bg-cdmx3.jpg" alt="banner"></div>
+			</div>
+		</article>
+		<article id="invitation">
+			<div class="container">
+				<div class="row">
+					<div class="cell-12">
+						<div class="bgTitles">
+							<h1 class="title">{{Lang.txt1}}</h1>
+						</div>
+						<p>{{Lang.txt2}}</p>
+						<p>{{Lang.txt3}}</p>
+						<p>{{Lang.txt4}}</p>
+						<p>{{Lang.txt5}}</p>
+						<p><strong>{{Lang.txt6}}</strong></p>
+						<p>{{Lang.txt7}}</p>
+						<p>{{Lang.txt8}}</p>
+						<p>{{Lang.txt9}}</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="cell-12">
+						<div class="bgTitles">
+							<h1 class="title">{{Lang.txt10}}</h1>
+						</div>
+						<p>{{Lang.txt11}}</p>
+						<p>{{Lang.txt12}}</p>
+						<p>{{Lang.txt13}}</p><br>
+						<div id="text-line">
+							<p>{{Lang.txt14}}</p>
+							<p>{{Lang.txt15}}</p>
+						</div>
+						<p>{{Lang.txt16}}</p>
+					</div>
+				</div>
+			</div>
+		</article>
+		<div class="img-container" id="footer">
+				<img src="images/logo-interdrought.png" alt="interdrought">
+		</div>
 	</section>
 	<!-- InstanceEndEditable -->
 	<footer> 
@@ -136,7 +185,7 @@
 	</script>
 
 	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/contact.js?v=1.0" type="text/javascript"></script>
+		<script src="js/translator/location.js" type="text/javascript"></script>
 	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
