el widget dell clima lo saque de: https://weatherwidget.io/

--- a/location.html
+++ b/location.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>INTERDROUGHT 2020</title>
+	<title>Location - INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -37,97 +37,91 @@
 </head>
 <body>
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu flex-justify-center">
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="welcome.html">{{Lang.menu002}}</a></li>
-					<li><a href="welcome.html">{{Lang.menu003}}</a></li>
-					<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
-					<li><a href="committee.html">{{Lang.menu005}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="location.html">{{Lang.menu013}}</a></li>
-					<li><a href="venue.html">{{Lang.menu014}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
-					<li><a href="climate.html">{{Lang.menu019}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
-        </ul> 
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
-			</li>
-			<!--<li><a class="nav-link" href="program.html">Program</a></li>
-			<li><a class="nav-link" href="speakers.html">Speakers</a></li>
-			<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
-			<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
-			<li><a class="nav-link" href="things.html">Things to Do</a></li>
-			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
-			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')">
-					<img src="images/mexico.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li><a href="#" ng-click="TxtLang('En')">
-				<img src="images/eu.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li>
-				<a class="nav-link" href="beta/index.html"><span class="mif-home"></span></a>
-			</li>
-		</ul>
+		<div class="container">
+			<ul class="app-bar-menu flex-justify-center">
+				<li>
+					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="welcome.html">{{Lang.menu002}}</a></li>
+						<li><a href="welcome.html">{{Lang.menu003}}</a></li>
+						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
+						<li><a href="committee.html">{{Lang.menu005}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="location.html">{{Lang.menu013}}</a></li>
+						<li><a href="venue.html">{{Lang.menu014}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
+						<li><a href="climate.html">{{Lang.menu019}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
+					</ul> 
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
+				</li>
+				<!--<li><a class="nav-link" href="program.html">Program</a></li>
+				<li><a class="nav-link" href="speakers.html">Speakers</a></li>
+				<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
+				<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
+				<li><a class="nav-link" href="things.html">Things to Do</a></li>
+				<li><a class="nav-link" href="contact.html">Contact Us</a></li>
+				<li><a class="nav-link" href="news.html">News</a></li>-->
+				<li>
+					<a href="#" ng-click="TxtLang('Es')" class="flag-nav"><img src="images/mexico.png" alt="mexico"></a>
+					<a href="#" ng-click="TxtLang('En')" class="flag-nav"><img src="images/eu.png" alt="mexico"></a>
+				</li>
+			</ul>
+		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
 	<section ng-controller="location">
-		<article>
-			<div data-role="carousel"
-					 data-cls-bullet="bullet-big"
-					 data-auto-start="true"
-					 data-cls-controls="fg-white"
-					 data-bullets-position="right"
-					 data-control-next="<span class='mif-chevron-right fg-cyan'></span>"
-					 data-control-prev="<span class='mif-chevron-left fg-cyan'></span>">
-						<div class="slide" data-cover="images/bg-cdmx1.jpg" alt="banner"></div>
-						<div class="slide" data-cover="images/bg-cdmx2.jpg" alt="banner"></div>
-						<div class="slide" data-cover="images/bg-cdmx3.jpg" alt="banner"></div>
+		<article class="carousel-wrapper">
+			<div id="carousel-bg">
+				<div class="slide" data-cover="images/bg-cdmx1.jpg" alt="banner"></div>
+				<div class="slide" data-cover="images/bg-cdmx2.jpg" alt="banner"></div>
+				<div class="slide" data-cover="images/bg-cdmx3.jpg" alt="banner"></div>
 			</div>
 		</article>
 		<article id="invitation">
-			<div class="container">
+			<div class="container shadow-container">
 				<div class="row">
 					<div class="cell-12">
 						<div class="bgTitles">
@@ -160,20 +154,20 @@
 				</div>
 			</div>
 		</article>
-		<div class="img-container" id="footer">
-				<img src="images/logo-interdrought.png" alt="interdrought">
-		</div>
 	</section>
+	<div id="footer">
+			<img src="images/logo-interdrought.png" alt="interdrought">
+	</div>
 	<!-- InstanceEndEditable -->
-	<footer> 
-		<div class="footer">
-			<img src="images/Logo-btc-blanco.png" alt="btc-logo">
-		</div>
+	<footer>
 	</footer>
 	<script src="js/lib.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/angular.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
+	<!-- InstanceBeginEditable name="scripts" -->
+		<script src="js/translator/location.js" type="text/javascript"></script>
+	<!-- InstanceEndEditable -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137964890-12"></script>
 	<script>
@@ -183,9 +177,5 @@
 
 	  gtag('config', 'UA-137964890-12');
 	</script>
-
-	<!-- InstanceBeginEditable name="scripts" -->
-		<script src="js/translator/location.js" type="text/javascript"></script>
-	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
