--- a/climate.html
+++ b/climate.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>INTERDROUGHT 2020</title>
+	<title>Climate - INTERDROUGHT 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -37,96 +37,110 @@
 </head>
 <body>
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu flex-justify-center">
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="welcome.html">{{Lang.menu002}}</a></li>
-					<li><a href="welcome.html">{{Lang.menu003}}</a></li>
-					<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
-					<li><a href="committee.html">{{Lang.menu005}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="location.html">{{Lang.menu013}}</a></li>
-					<li><a href="venue.html">{{Lang.menu014}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
-					<li><a href="climate.html">{{Lang.menu019}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
-        </ul> 
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
-			</li>
-			<!--<li><a class="nav-link" href="program.html">Program</a></li>
-			<li><a class="nav-link" href="speakers.html">Speakers</a></li>
-			<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
-			<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
-			<li><a class="nav-link" href="things.html">Things to Do</a></li>
-			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
-			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')">
-					<img src="images/mexico.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li><a href="#" ng-click="TxtLang('En')">
-				<img src="images/eu.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li>
-				<a class="nav-link" href="beta/index.html"><span class="mif-home"></span></a>
-			</li>
-		</ul>
+		<div class="container">
+			<ul class="app-bar-menu flex-justify-center">
+				<li>
+					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="welcome.html">{{Lang.menu002}}</a></li>
+						<li><a href="welcome.html">{{Lang.menu003}}</a></li>
+						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
+						<li><a href="committee.html">{{Lang.menu005}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="location.html">{{Lang.menu013}}</a></li>
+						<li><a href="venue.html">{{Lang.menu014}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
+						<li><a href="climate.html">{{Lang.menu019}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
+					</ul> 
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
+				</li>
+				<!--<li><a class="nav-link" href="program.html">Program</a></li>
+				<li><a class="nav-link" href="speakers.html">Speakers</a></li>
+				<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
+				<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
+				<li><a class="nav-link" href="things.html">Things to Do</a></li>
+				<li><a class="nav-link" href="contact.html">Contact Us</a></li>
+				<li><a class="nav-link" href="news.html">News</a></li>-->
+				<li>
+					<a href="#" ng-click="TxtLang('Es')" class="flag-nav"><img src="images/mexico.png" alt="mexico"></a>
+					<a href="#" ng-click="TxtLang('En')" class="flag-nav"><img src="images/eu.png" alt="mexico"></a>
+				</li>
+			</ul>
+		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
 	<section ng-controller="climate">
-	<div class="img-container" id="footer">
-				<img src="images/logo-interdrought.png" alt="interdrought">
+		<div class="container">
+			<div class="grid">
+				<div class="row">
+					<div class="cell">
+						<div id="cont_3be2d07eaa8856fcacbad869a1bdbb2d"></div>
+						<a class="weatherwidget-io" href="https://forecast7.com/en/19d43n99d13/mexico-city/" data-label_1="MEXICO CITY" data-label_2="WEATHER" data-theme="pure" >MEXICO CITY WEATHER</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
+	<div class="img-container" id="footer">
+		<img src="images/logo-interdrought.png" alt="interdrought">
+	</div>
 	<!-- InstanceEndEditable -->
-	<footer> 
-		<div class="footer">
-			<img src="images/Logo-btc-blanco.png" alt="btc-logo">
-		</div>
+	<footer>
 	</footer>
 	<script src="js/lib.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/angular.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
+	<!-- InstanceBeginEditable name="scripts" -->
+	<script src="js/translator/climate.js" type="text/javascript"></script>
+	<script type="text/javascript" async src="https://www.meteored.mx/wid_loader/3be2d07eaa8856fcacbad869a1bdbb2d"></script>
+	<script>
+	 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+	</script>
+	<!-- InstanceEndEditable -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137964890-12"></script>
 	<script>
@@ -136,10 +150,5 @@
 
 	  gtag('config', 'UA-137964890-12');
 	</script>
-
-	<!-- InstanceBeginEditable name="scripts" -->
-	<script src="js/translator/climate.js" type="text/javascript"></script> 
-	<div id="cont_3be2d07eaa8856fcacbad869a1bdbb2d"><script type="text/javascript" async src="https://www.meteored.mx/wid_loader/3be2d07eaa8856fcacbad869a1bdbb2d"></script></div>
-	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
