--- a/registration.html
+++ b/registration.html
@@ -37,91 +37,90 @@
 </head>
 <body>
 	<nav data-role="appbar" data-expand-point="lg" ng-controller="nav">
-		<ul class="app-bar-menu flex-justify-center">
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="welcome.html">{{Lang.menu002}}</a></li>
-					<li><a href="welcome.html">{{Lang.menu003}}</a></li>
-					<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
-					<li><a href="committee.html">{{Lang.menu005}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="location.html">{{Lang.menu013}}</a></li>
-					<li><a href="venue.html">{{Lang.menu014}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
-					<li><a href="climate.html">{{Lang.menu019}}</a></li>
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
-					<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
-        </ul> 
-			</li>
-			<li>
-				<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
-				<ul class="d-menu" data-role="dropdown">
-					<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
-        </ul>
-			</li>
-			<li>
-				<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
-			</li>
-			<!--<li><a class="nav-link" href="program.html">Program</a></li>
-			<li><a class="nav-link" href="speakers.html">Speakers</a></li>
-			<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
-			<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
-			<li><a class="nav-link" href="things.html">Things to Do</a></li>
-			<li><a class="nav-link" href="contact.html">Contact Us</a></li>
-			<li><a class="nav-link" href="news.html">News</a></li>-->
-			<li><a href="#" ng-click="TxtLang('Es')">
-					<img src="images/mexico.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li><a href="#" ng-click="TxtLang('En')">
-				<img src="images/eu.png" alt="mexico" class="logo-nav">
-				</a></li>
-			<li>
-				<a class="nav-link" href="beta/index.html"><span class="mif-home"></span></a>
-			</li>
-		</ul>
+		<div class="container">
+			<ul class="app-bar-menu flex-justify-center">
+				<li>
+					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="welcome.html">{{Lang.menu002}}</a></li>
+						<li><a href="welcome.html">{{Lang.menu003}}</a></li>
+						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
+						<li><a href="committee.html">{{Lang.menu005}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu008}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu009}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu010}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu011}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="index.html">{{Lang.menu012}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="location.html">{{Lang.menu013}}</a></li>
+						<li><a href="venue.html">{{Lang.menu014}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu015}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu016}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu017}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu018}}</a></li>
+						<li><a href="climate.html">{{Lang.menu019}}</a></li>
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu020}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu021}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu022}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu023}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu024}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu025}}</a></li>
+						<li><a href="beta/index.html">{{Lang.menu026}}</a></li>
+					</ul> 
+				</li>
+				<li>
+					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu027}}</a>
+					<ul class="d-menu" data-role="dropdown">
+						<li><a href="beta/index.html">{{Lang.menu028}}</a></li> 
+					</ul>
+				</li>
+				<li>
+					<a class="nav-link" href="beta/index.html">{{Lang.menu029}}</a>
+				</li>
+				<!--<li><a class="nav-link" href="program.html">Program</a></li>
+				<li><a class="nav-link" href="speakers.html">Speakers</a></li>
+				<li><a class="nav-link" href="registration.html">Registration &amp; Abstracts</a></li>
+				<li><a class="nav-link" href="venue.html">Venue &amp; Travel</a></li>
+				<li><a class="nav-link" href="things.html">Things to Do</a></li>
+				<li><a class="nav-link" href="contact.html">Contact Us</a></li>
+				<li><a class="nav-link" href="news.html">News</a></li>-->
+				<li>
+					<a href="#" ng-click="TxtLang('Es')" class="flag-nav"><img src="images/mexico.png" alt="mexico"></a>
+					<a href="#" ng-click="TxtLang('En')" class="flag-nav"><img src="images/eu.png" alt="mexico"></a>
+				</li>
+			</ul>
+		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
 	<!-- InstanceEndEditable -->
-	<footer> 
-		<div class="footer">
-			<img src="images/Logo-btc-blanco.png" alt="btc-logo">
-		</div>
+	<footer>
 	</footer>
 	<script src="js/lib.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/angular.min.js?v=1.0" type="text/javascript"></script>
 	<script src="js/translator/base.js?v=1.0" type="text/javascript"></script>
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
+	<!-- InstanceBeginEditable name="scripts" -->
+	<!-- InstanceEndEditable -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137964890-12"></script>
 	<script>
@@ -131,8 +130,5 @@
 
 	  gtag('config', 'UA-137964890-12');
 	</script>
-
-	<!-- InstanceBeginEditable name="scripts" -->
-	<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
