--- a/program.html
+++ b/program.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Untitled Document</title>
+	<title>Interdrought 2020</title>
 	<!-- InstanceEndEditable -->
 	<meta name="description" content="{{Lang.menu031}}">
 	<meta name="keywords" content="{{Lang.menu030}}"> 
@@ -40,7 +40,7 @@
 		<div class="container">
 			<ul class="app-bar-menu flex-justify-center">
 				<li>
-					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+					<a class="nav-link " href="beta/index.html"><span class="mif-home mif-2x"></span></a>
 				</li>
 				<li>
 					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
@@ -50,11 +50,11 @@
 						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
 						<li><a href="committee.html">{{Lang.menu005}}</a></li>
 					</ul>
-				</li>
+				</li> 
 				<li>
-					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+					<a class="nav-link" href="program.html">{{Lang.menu006}}</a>
 				</li>
-				<li>
+				<li> 
 					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
 				</li>
 				<li>
@@ -112,9 +112,230 @@
 		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-		<section ng-controller="program">
-	<h1>{{Lang.txt1}}</h1>
-	</section>
+	<article class="carousel-wrapper">
+			<div id="carousel-bg">
+						<div class="slide" data-cover="images/bg-catarina.jpg" alt="banner"></div>
+						<div class="slide" data-cover="images/bg-gotas.jpg" alt="banner"></div>
+			</div>
+		</article>
+		<section ng-controller="program"> 
+			<div class="container shadow-container">
+				<div class="row">
+					<div class="cell-12">
+						<div class="bgTitles">
+							<h1 class="title">{{Lang.txt43}}</h1>
+						</div>
+			<table class="table table-border striped" data-horizontal-scroll="true"> 
+				<!--monday-->
+			<thead>
+				<tr>
+					<th colspan="2">{{Lang.txt1}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>17:00-20:00</td>
+					<td>{{Lang.txt2}}</td>
+				</tr>
+			</tbody>
+					<!--tuesday-->
+			<thead>
+				<tr>
+					<th colspan="2">{{Lang.txt11}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>07:00-09:00</td>
+					<td>{{Lang.txt2}}</td>
+				</tr>
+				<tr>
+					<td>09:00-10:30</td>
+					<td>{{Lang.txt3}}</td>
+				</tr>
+				<tr>
+					<td>10:30-11:00</td>
+					<td>{{Lang.txt4}}</td>
+				</tr>
+				<tr>
+					<td>11:00-12:30</td>
+					<td>{{Lang.txt5}}</td>
+				</tr>
+				<tr>
+					<td>12:30-13:30</td>
+					<td>{{Lang.txt6}}</td>
+				</tr>
+				<tr>
+					<td>13:30-15:00</td>
+					<td>{{Lang.txt7}}</td>
+				</tr>
+				<tr>
+					<td>15:00-15:30</td>
+					<td>{{Lang.txt8}}</td>
+				</tr>
+				<tr>
+					<td>15:30-17:00</td>
+					<td>{{Lang.txt9}}</td>
+				</tr>
+				<tr>
+					<td>17:30</td>
+					<td>{{Lang.txt10}}</td>
+				</tr>
+			</tbody>
+				<!--wednesday-->
+			<thead>
+				<tr>
+					<th colspan="2">{{Lang.txt12}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>09:00-10:30</td>
+					<td>{{Lang.txt13}}</td>
+				</tr>
+				<tr>
+					<td>10:30-11:00</td>
+					<td>{{Lang.txt14}}</td>
+				</tr>
+				<tr>
+					<td>11:00-12:30</td>
+					<td>{{Lang.txt15}}</td>
+				</tr>
+				<tr>
+					<td>12:30-13:30</td>
+					<td>{{Lang.txt16}}</td>
+				</tr>
+				<tr>
+					<td>13:30-15:00</td>
+					<td>{{Lang.txt17}}</td>
+				</tr>
+				<tr>
+					<td>15:00-15:30</td>
+					<td>{{Lang.txt18}}</td>
+				</tr>
+				<tr>
+					<td>15:30-17:00</td>
+					<td>{{Lang.txt19}}</td>
+				</tr>
+				<tr>
+					<td>17:30</td>
+					<td>{{Lang.txt20}}</td>
+				</tr>
+			</tbody>
+			<!--thursday-->
+			<thead>
+				<tr>
+					<th colspan="2">{{Lang.txt42}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>09:00-10:30</td>
+					<td>{{Lang.txt21}}</td>
+				</tr>
+				<tr>
+					<td>10:30-11:00</td>
+					<td>{{Lang.txt18}}</td>
+				</tr>
+				<tr>
+					<td>11:00-12:30</td>
+					<td>{{Lang.txt22}}</td>
+				</tr>
+				<tr>
+					<td>12:30-13:30</td>
+					<td>{{Lang.txt16}}</td>
+				</tr>
+				<tr>
+					<td>13:30-15:00</td>
+					<td>{{Lang.txt17}}</td>
+				</tr>
+				<tr>
+					<td>15:00-15:30</td>
+					<td>{{Lang.txt14}}</td>
+				</tr>
+				<tr>
+					<td rowspan="2">15:30-17:00</td>
+					<td>{{Lang.txt23}}</td>
+				</tr>
+				<tr>
+					<td>{{Lang.txt24}}</td>
+				</tr>
+				<tr>
+					<td>18:00- + </td>
+					<td>{{Lang.txt25}}</td>
+				</tr>
+					<!--friday-->
+			<thead>
+				<tr>
+					<th colspan="2">{{Lang.txt26}}</th>
+				</tr>
+			</thead>
+			</tbody>
+			<tbody>
+				<tr>
+					<td>07:15</td>
+					<td>{{Lang.txt27}}</td>
+				</tr>
+				<tr>
+					<td>8:45</td>
+					<td>{{Lang.txt28}}</td>
+				</tr>
+				<tr>
+					<td>09:00-10:30</td>
+					<td>{{Lang.txt29}}</td>
+				</tr>
+				<tr>
+					<td>10:30-11:00</td>
+					<td>{{Lang.txt14}}</td>
+				</tr>
+				<tr>
+					<td>11:00-12:30</td>
+					<td>{{Lang.txt30}}</td>
+				</tr>
+				<tr>
+					<td>12:30-14:00</td>
+					<td>{{Lang.txt31}}</td>
+				</tr>
+				<tr>
+					<td>14:00-14:45</td>
+					<td>{{Lang.txt32}}</td>
+				</tr>
+				<tr>
+					<td>15:00-17:00</td>
+					<td>{{Lang.txt33}}</td>
+				</tr>
+				<tr>
+					<td>17:15-19:15</td>
+					<td>{{Lang.txt34}}</td>
+				</tr>
+			</tbody>
+			</table> 
+						
+					</div>
+				</div>
+				<div class="row">
+					<div class="cell-12">
+						<div class="bg-green">
+						<h2>{{Lang.txt35}}</h2>
+						<p>{{Lang.txt36}}</p>
+						<p>{{Lang.txt37}}</p>
+						<p>{{Lang.txt38}}</p>
+						<p>{{Lang.txt39}}</p>
+					<div class="row">
+					<div class="cell-12">
+						<h2>{{Lang.txt40}}</h2>
+						<p>{{Lang.txt41}}<span><a href="">{{Lang.txt44}}</a></span></p>
+					</div>
+					
+					</div>
+				</div>
+				</div>
+					</div>
+			</div>
+			<div class="img-container" id="footer">
+				<img src="images/logo-interdrought.png" alt="interdrought">
+		</div>
+		</section>
 	<!-- InstanceEndEditable -->
 	<footer>
 	</footer>
