--- a/climate.html
+++ b/climate.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<ul class="app-bar-menu flex-justify-center">
 				<li>
-					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+					<a class="nav-link " href="beta/index.html"><span class="mif-home mif-2x"></span></a>
 				</li>
 				<li>
 					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
@@ -50,11 +50,11 @@
 						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
 						<li><a href="committee.html">{{Lang.menu005}}</a></li>
 					</ul>
-				</li>
+				</li> 
 				<li>
-					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+					<a class="nav-link" href="program.html">{{Lang.menu006}}</a>
 				</li>
-				<li>
+				<li> 
 					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
 				</li>
 				<li>
@@ -112,16 +112,20 @@
 		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="climate">
-		<div class="container">
-			<div class="grid">
+	<div class="img-container"> 
+			<img src="images/bg-gotas.jpg" alt="interdrought">
+		</div>
+	<section ng-controller="climate" id="climate">
+		<div class="container shadow-container">
+					<div class="bgTitles">
+							<h1 class="title">{{Lang.txt1}}</h1>
+						</div> 
 				<div class="row">
 					<div class="cell">
 						<div id="cont_3be2d07eaa8856fcacbad869a1bdbb2d"></div>
 						<a class="weatherwidget-io" href="https://forecast7.com/en/19d43n99d13/mexico-city/" data-label_1="MEXICO CITY" data-label_2="WEATHER" data-theme="pure" >MEXICO CITY WEATHER</a>
 					</div>
 				</div>
-			</div>
 		</div>
 	</section>
 	<div class="img-container" id="footer">
@@ -136,7 +140,6 @@
 	<script src="js/site.js?v=1.0" type="text/javascript"></script>
 	<!-- InstanceBeginEditable name="scripts" -->
 	<script src="js/translator/climate.js" type="text/javascript"></script>
-	<script type="text/javascript" async src="https://www.meteored.mx/wid_loader/3be2d07eaa8856fcacbad869a1bdbb2d"></script>
 	<script>
 	 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 	</script>
