--- a/committe-int.html
+++ b/committe-int.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<ul class="app-bar-menu flex-justify-center">
 				<li>
-					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+					<a class="nav-link " href="beta/index.html"><span class="mif-home mif-2x"></span></a>
 				</li>
 				<li>
 					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
@@ -50,11 +50,11 @@
 						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
 						<li><a href="committee.html">{{Lang.menu005}}</a></li>
 					</ul>
-				</li>
+				</li> 
 				<li>
-					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+					<a class="nav-link" href="program.html">{{Lang.menu006}}</a>
 				</li>
-				<li>
+				<li> 
 					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
 				</li>
 				<li>
@@ -112,14 +112,15 @@
 		</div>
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
-	<section ng-controller="committe-int" id="committe-int">
-		<div class="img-container">
+	<div class="img-container">
 			<img src="images/bg-gotas.jpg" alt="interdrought">
 		</div>
-		<div class="container">
+	<section ng-controller="committe-int" id="committe-int">
+		
+		<div class="container shadow-container">
 			<div class="row">
 				<div class="cell-12">
-					<div class="bgTitles">
+					<div class="bgTitles"> 
 						<h1 class="title">{{Lang.txt1}}</h1>
 					</div>
 					<p>{{Lang.txt2}}</p>
