--- a/location.html
+++ b/location.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<ul class="app-bar-menu flex-justify-center">
 				<li>
-					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+					<a class="nav-link " href="beta/index.html"><span class="mif-home mif-2x"></span></a>
 				</li>
 				<li>
 					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
@@ -50,11 +50,11 @@
 						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
 						<li><a href="committee.html">{{Lang.menu005}}</a></li>
 					</ul>
-				</li>
+				</li> 
 				<li>
-					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+					<a class="nav-link" href="program.html">{{Lang.menu006}}</a>
 				</li>
-				<li>
+				<li> 
 					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
 				</li>
 				<li>
@@ -118,6 +118,7 @@
 				<div class="slide" data-cover="images/bg-cdmx1.jpg" alt="banner"></div>
 				<div class="slide" data-cover="images/bg-cdmx2.jpg" alt="banner"></div>
 				<div class="slide" data-cover="images/bg-cdmx3.jpg" alt="banner"></div>
+				<div class="slide" data-cover="images/bg-cdmx4.jpg" alt="banner"></div>
 			</div>
 		</article>
 		<article id="invitation">
