--- a/welcome.html
+++ b/welcome.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<ul class="app-bar-menu flex-justify-center">
 				<li>
-					<a class="nav-link" href="beta/index.html"><span class="mif-home mif-2x"></span></a>
+					<a class="nav-link " href="beta/index.html"><span class="mif-home mif-2x"></span></a>
 				</li>
 				<li>
 					<a class="nav-link dropdown-toggle" href="beta/index.html">{{Lang.menu001}}</a>
@@ -50,11 +50,11 @@
 						<li><a href="committe-int.html">{{Lang.menu004}}</a></li>
 						<li><a href="committee.html">{{Lang.menu005}}</a></li>
 					</ul>
-				</li>
+				</li> 
 				<li>
-					<a class="nav-link" href="beta/index.html">{{Lang.menu006}}</a>
+					<a class="nav-link" href="program.html">{{Lang.menu006}}</a>
 				</li>
-				<li>
+				<li> 
 					<a class="nav-link" href="beta/index.html">{{Lang.menu007}}</a>
 				</li>
 				<li>
@@ -113,14 +113,8 @@
 	</nav> 
 	<!-- InstanceBeginEditable name="content" -->
 	<section ng-controller="welcome">
-		<article>
-			<div data-role="carousel"
-					 data-cls-bullet="bullet-big"
-					 data-auto-start="true"
-					 data-cls-controls="fg-white"
-					 data-bullets-position="right"
-					 data-control-next="<span class='mif-chevron-right fg-cyan'></span>"
-					 data-control-prev="<span class='mif-chevron-left fg-cyan'></span>">
+		<article class="carousel-wrapper">
+			<div id="carousel-bg">
 						<div class="slide" data-cover="images/welcome-1.jpg" alt="banner"></div>
 						<div class="slide" data-cover="images/welcome-2.jpg" alt="banner"></div>
 						<div class="slide" data-cover="images/welcome-3.jpg" alt="banner"></div>
@@ -128,7 +122,7 @@
 			</div>
 		</article>
 		<article id="invitation">
-			<div class="container">
+			<div class="container shadow-container">
 				<div class="row">
 					<div class="cell-12">
 						<div class="bgTitles">
